# matrix-channel-mcp

./: .gitignore  .mcp.json  .oxfmtrc.json  CLAUDE.md  README.md  docker-compose.yml  element-config.json  package.json  pyproject.toml  server.py  server.ts  tsconfig.json
charts/continuwuity/: Chart.yaml  values.yaml
charts/continuwuity/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  service.yaml  statefulset.yaml
charts/element/: Chart.yaml  values.yaml
charts/element/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
