[project]
name = "matrix-channel-mcp"
version = "0.1.0"
description = "MCP server bridging one Matrix room to Claude Code's claude/channel feature"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27,<2",
    "mautrix>=0.20",
    "commonmark>=0.9",
    "pydantic-settings>=2.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
matrix-channel-mcp = "server:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# The channel instructions and tool descriptions are deliberately long prose strings.
ignore = ["E501"]

[tool.ty.rules]
